Add support for tracking changes to administrative metadata
